# test_pulasr_msk

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
app/api/: models.py  serializer.py  services.py  urls.py  views.py
app/api/migrations/: 0001_initial.py  0002_remove_product_image_product_path.py  0003_rename_path_product_image.py  0004_alter_product_image.py
app/main/: settings.py  urls.py
